--- a/site/blueprints/pages/home.yml
+++ b/site/blueprints/pages/home.yml
@@ -10,25 +10,29 @@ icon: 🏠
 options:
   changeStatus: false
 
-# Here we define an info section and a pages section (`photography`)
-sections:
-  content:
-    type: fields
-    fields:
-      headline:
-        type: text
-        width: 1/2
-      gap:
-        width: 1/2
-      subheadline:
-        type: text
-        width: 1/2
 
-  # The photography section extends a pages section defined in the `/site/blueprints/section/album.yml` blueprint
-  # More about reusing and extending sections: https://getkirby.com/docs/guide/blueprints/extending-blueprints#reusing-and-extending-sectionss
-  photography:
-    label: Photography
-    extends: sections/albums
-    status: listed
-    size: small
-    help: All projects for the homepage are being pulled from the photography page.
+tabs:
+  content:
+    label: Seiteninhalt
+    columns:
+      main:
+        width: 2/3
+        sections:
+          hero_section:
+            type: fields
+            fields:
+              hero_headline:
+                label: Hero: Überschrift
+                type: text
+              hero_text:
+                label: Hero: Text
+                type: textarea
+                size: medium
+              hero_image:
+                label: Hero: Bild
+                type: files
+                max: 1                 
+                layout: cards          
+                image:                 
+                  ratio: 16/9          
+                  cover: true
